--- a/netflix/index.html
+++ b/netflix/index.html
@@ -1,1 +1,65 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Netflix</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+    <div class="front">
+        <div class="bg-picture">
+            <div class="shadow">
+                <div class="navbar">
+                    <div class="logo"></div>
+                    <button class="sign-in"><b>Sign In</b></button>
+                </div>
+                <div class="heading">
+                    <h1 class="head1">Unlimited movies, TV shows, and more</h1>
+                    <p class="para1">Watch anywhere. Cancel anytime.</p>  
+                    <p class="para2">Ready to watch? Enter your email to create or restart your membership.</p>
+                    <div class="input">
+                        <input class="enter-email" type="email" placeholder="Email address">
+                        <button class="get-start"><b>Get Started ></b></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="middle-A">
+        <div class="middle-A1">
+            <h1 class="head2">Enjoy on your TV.</h1>
+            <p class="para3">Watch on smart TVs, PlayStation, Xbox, <br>Chromecast, Apple TV, Blu-ray players, <br>and more.</p>
+        </div>
+
+        <div class="middle-A2">
+            <div class="mA-img"></div>
+            <div class="mA-video">
+                <video src="asset/video-tv.m4v" autoplay muted loop></video>
+            </div>
+        </div>
+    </div>
+
+    <div class="middle-B">
+        <div class="middle-B1">
+            <div class="mB-img1"></div>
+            <div class="B-box">
+                <div class="box-img"></div>
+                <p class="para5"><b>Stranger <br>Things</b></p>
+                <p class="para6">Downloading...</p>
+                <i class="fa-solid fa-download B-icon"></i>
+            </div>
+            
+        </div>
+
+        <div class="middle-B2">
+            <h1 class="head3">Download your <br>shows to watch <br>offline</h1>
+            <p class="para4">Save your favorites easily and always have <br> something to watch.</p>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
