--- a/netflix/index.html
+++ b/netflix/index.html
@@ -60,6 +60,41 @@
             <p class="para4">Save your favorites easily and always have <br> something to watch.</p>
         </div>
     </div>
+
+    <div class="middle-C">
+        <div class="middle-C1">
+            <h1 class="head4">Watch everywhere</h1>
+            <p class="para7">Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
+        </div>
+    </div>
+
+    <div class="middle-D">
+        <div class="middle-D1">
+            <div class="mD-img"></div>
+        </div>
+
+        <div class="middle-D2">
+            <h1 class="head5">Create profiles for kids</h1>
+            <p class="para8">Send kids on adventures with their favorite characters in a space made just for them—free with your membership.</p>
+        </div>
+    </div>
+
+    <div class="middle-E">
+        <div class="middle-E1">
+            <h1 class="head6">Frequently Asked Questions</h1>
+        </div>
+        <div class="middle-E2">
+            <div class="mE-box"> What is Netflix?</div>
+            <div class="mE-box">How much does Netflix cost?</div>
+            <div class="mE-box">here can I watch?</div>
+            <div class="mE-box">How do I cancel?</div>
+            <div class="mE-box">What can I watch on Netflix?</div>
+            <div class="mE-box">Is Netflix good for kids?</div>
+        </div>
+
+    </div>
+
+
     <script src="script.js"></script>
 </body>
 </html>
