--- a/netflix/index.html
+++ b/netflix/index.html
@@ -1,100 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Netflix</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="front">
-        <div class="bg-picture">
-            <div class="shadow">
-                <div class="navbar">
-                    <div class="logo"></div>
-                    <button class="sign-in"><b>Sign In</b></button>
-                </div>
-                <div class="heading">
-                    <h1 class="head1">Unlimited movies, TV shows, and more</h1>
-                    <p class="para1">Watch anywhere. Cancel anytime.</p>  
-                    <p class="para2">Ready to watch? Enter your email to create or restart your membership.</p>
-                    <div class="input">
-                        <input class="enter-email" type="email" placeholder="Email address">
-                        <button class="get-start"><b>Get Started ></b></button>
-                    </div>
-                </div>
+      <div class="bg-picture">
+        <div class="shadow">
+          <div class="navbar">
+            <div class="logo"></div>
+            <button class="sign-in"><b>Sign In</b></button>
+          </div>
+          <div class="heading">
+            <h1 class="head1">Unlimited movies, TV shows, and more</h1>
+            <p class="para1">Watch anywhere. Cancel anytime.</p>
+            <p class="para2">
+              Ready to watch? Enter your email to create or restart your
+              membership.
+            </p>
+            <div class="input">
+              <input
+                class="enter-email"
+                type="email"
+                placeholder="Email address"
+              />
+              <button class="get-start"><b>Get Started ></b></button>
             </div>
+          </div>
         </div>
+      </div>
     </div>
 
     <div class="middle-A">
-        <div class="middle-A1">
-            <h1 class="head2">Enjoy on your TV.</h1>
-            <p class="para3">Watch on smart TVs, PlayStation, Xbox, <br>Chromecast, Apple TV, Blu-ray players, <br>and more.</p>
-        </div>
+      <div class="middle-A1">
+        <h1 class="head2">Enjoy on your TV.</h1>
+        <p class="para3">
+          Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray
+          players, and more.
+        </p>
+      </div>
 
-        <div class="middle-A2">
-            <div class="mA-img"></div>
-            <div class="mA-video">
-                <video src="asset/video-tv.m4v" autoplay muted loop></video>
-            </div>
+      <div class="middle-A2">
+        <div class="mA-img"></div>
+        <div class="mA-video">
+          <video src="asset/video-tv.m4v" autoplay muted loop></video>
         </div>
+      </div>
     </div>
 
     <div class="middle-B">
-        <div class="middle-B1">
-            <div class="mB-img1"></div>
-            <div class="B-box">
-                <div class="box-img"></div>
-                <p class="para5"><b>Stranger <br>Things</b></p>
-                <p class="para6">Downloading...</p>
-                <i class="fa-solid fa-download B-icon"></i>
-            </div>
-            
+      <div class="middle-B1">
+        <div class="mB-img1"></div>
+        <div class="B-box">
+          <div class="box-img"></div>
+          <p class="para5">
+            <b>Stranger <br />Things</b>
+          </p>
+          <p class="para6">Downloading...</p>
+          <i class="fa-solid fa-download B-icon"></i>
         </div>
+      </div>
 
-        <div class="middle-B2">
-            <h1 class="head3">Download your <br>shows to watch <br>offline</h1>
-            <p class="para4">Save your favorites easily and always have <br> something to watch.</p>
-        </div>
+      <div class="middle-B2">
+        <h1 class="head3">Download your <br />shows to watch <br />offline</h1>
+        <p class="para4">
+          Save your favorites easily and always have <br />
+          something to watch.
+        </p>
+      </div>
     </div>
 
     <div class="middle-C">
-        <div class="middle-C1">
-            <h1 class="head4">Watch everywhere</h1>
-            <p class="para7">Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
-        </div>
+      <div class="middle-C1">
+        <h1 class="head4">Watch everywhere</h1>
+        <p class="para7">
+          Stream unlimited movies and TV shows on your phone, tablet, laptop,
+          and TV.
+        </p>
+      </div>
     </div>
 
     <div class="middle-D">
-        <div class="middle-D1">
-            <div class="mD-img"></div>
-        </div>
+      <div class="middle-D1">
+        <div class="mD-img"></div>
+      </div>
 
-        <div class="middle-D2">
-            <h1 class="head5">Create profiles for kids</h1>
-            <p class="para8">Send kids on adventures with their favorite characters in a space made just for them—free with your membership.</p>
-        </div>
+      <div class="middle-D2">
+        <h1 class="head5">Create profiles for kids</h1>
+        <p class="para8">
+          Send kids on adventures with their favorite characters in a space made
+          just for them—free with your membership.
+        </p>
+      </div>
     </div>
 
     <div class="middle-E">
-        <div class="middle-E1">
-            <h1 class="head6">Frequently Asked Questions</h1>
+      <div class="middle-E1">
+        <h1 class="head6">Frequently Asked Questions</h1>
+      </div>
+      <div class="middle-E2">
+        <div class="mE-box">
+          What is Netflix?
+          <p>+</p>
         </div>
-        <div class="middle-E2">
-            <div class="mE-box"> What is Netflix?</div>
-            <div class="mE-box">How much does Netflix cost?</div>
-            <div class="mE-box">here can I watch?</div>
-            <div class="mE-box">How do I cancel?</div>
-            <div class="mE-box">What can I watch on Netflix?</div>
-            <div class="mE-box">Is Netflix good for kids?</div>
+        <div class="mE-box">
+          How much does Netflix cost?
+          <p>+</p>
         </div>
-
+        <div class="mE-box">
+          here can I watch?
+          <p>+</p>
+        </div>
+        <div class="mE-box">
+          How do I cancel?
+          <p>+</p>
+        </div>
+        <div class="mE-box">
+          What can I watch on Netflix?
+          <p>+</p>
+        </div>
+        <div class="mE-box">
+          Is Netflix good for kids?
+          <p>+</p>
+        </div>
+      </div>
+      <div class="middle-E3">
+        <p class="para9">
+          Ready to watch? Enter your email to create or restart your membership.
+        </p>
+        <div class="input">
+          <input class="enter-email" type="email" placeholder="Email address" />
+          <button class="get-start"><b>Get Started ></b></button>
+        </div>
+      </div>
     </div>
 
+    <footer>
+      <div class="footer-1">
+        <a href="">Questions? Contact us.</a>
+      </div>
+      <div class="footer-2">
+        <div class="footer-B">
+          <div class="f-box2">
+            <a href="">FAQ</a>
+            <a href=""> Help Center</a>
+            <a href="">Account</a>
+            <a href="">Media Center</a>
+          </div>
+          <div class="f-box2">
+            <a href="">Investor Relations</a>
+            <a href="">Jobs</a>
+            <a href="">Ways to Watch</a>
+            <a href=""> Terms of Use</a>
+          </div>
+          <div class="f-box2">
+            <a href="">Privacy</a>
+            <a href="">Cookie Preferences</a>
+            <a href="">Corporate Information</a>
+            <a href=""> Contact Us</a>
+          </div>
+          <div class="f-box2">
+            <a href="">Speed Test</a>
+            <a href="">Legal Notices</a>
+            <a href="">Only on Netflix</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer-3">
+        <div class="footer-C">
+          <select class="footer-selection">
+            <option>English</option>
+          </select>
+          <p class="para10">Netflix Bangladesh</p>
+        </div>
+      </div>
+    </footer>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
